@@ -35,7 +35,6 @@ BRLCAD_ADDEXEC(ihist ihist.c libbu)
 BRLCAD_ADDEXEC(imod imod.c "libbu;${M_LIBRARY}")
 BRLCAD_ADDEXEC(istats istats.c "libbu;${M_LIBRARY}")
 BRLCAD_ADDEXEC(smod smod.c "libbu;${M_LIBRARY}")
-BRLCAD_ADDEXEC(syn syn.c "libbu;${M_LIBRARY}")
 BRLCAD_ADDEXEC(u-a u-a.c libbu)
 BRLCAD_ADDEXEC(u-bw u-bw.c libbu)
 BRLCAD_ADDEXEC(u-d u-d.c libbu)
