@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2012-04-XX  Release 7.21.X                                     ---
 ----------------------------------------------------------------------
 
+* removed obsolete 'syn' multi sine synthesis tool - Sean Morrison
 * fixed memory corruption in vegetation generator tool - Sean Morrison
 * fixed ARS bounding box size affecting overlap handling - Cliff Yapp
 * fixed bug in fast4-g importer handling HOLE/WALL cards - Nick Reed
